# Modern-Apps

./: .gitignore  FEATURE_IDEAS.md  README.md  gradle.properties  release.sh  settings.gradle.kts  version.txt
.artifacts/1b96f134-f5df-4ad0-957c-f7ef0bc079b4/: implementation_plan.artifact.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: android.yml  issue_labeler.yml
calendar/: build.gradle.kts
calendar/src/main/: AndroidManifest.xml
camera/: build.gradle.kts
camera/src/main/: AndroidManifest.xml
clock/: build.gradle.kts
clock/src/main/: AndroidManifest.xml
contacts/: build.gradle.kts
contacts/src/main/: AndroidManifest.xml
education/: build.gradle.kts
education/src/main/: AndroidManifest.xml
email/: build.gradle.kts
email/src/main/: AndroidManifest.xml
everysync/: build.gradle.kts
everysync/src/main/: AndroidManifest.xml
files/: build.gradle.kts
files/src/main/: AndroidManifest.xml
findfamily/: build.gradle.kts
games/alchemist/: build.gradle.kts
games/chess/: build.gradle.kts
games/chess/src/main/cpp/: CMakeLists.txt
games/unblockjam/: build.gradle.kts
games/wordmaker/: build.gradle.kts
gradle/: libs.versions.toml
headphones/: build.gradle.kts
health/: build.gradle.kts
launcher/: build.gradle.kts
maps/: build.gradle.kts
messages/: MEDIA_FEATURES_CONTRACTS.md  build.gradle.kts
music/: build.gradle.kts
notes/: build.gradle.kts
office/: BACKEND_DESIGN.md  build.gradle.kts
openassistant/: build.gradle.kts
passwords/: build.gradle.kts
pdf/: build.gradle.kts
pdf/rust/: Cargo.toml
pdf/rust/src/: crypto.rs  lib.rs
photos/: build.gradle.kts
scratch/: migrate_router.py
scripts/maps/: generator.cpp  run_generator.sh
scripts/photos/: README.md  prepare_models.py  requirements.txt
things/: build.gradle.kts
tools/holidaygen/: build.gradle.kts
watch/phone/: build.gradle.kts
watch/shared/: build.gradle.kts
watch/watch/: build.gradle.kts
weather/: build.gradle.kts
web/: build.gradle.kts
whatsapp-signal/: build.gradle.kts
youpipe/: build.gradle.kts
(+937 files in other folders)
